# crapper

./: CMakeLists.txt  README.md  dependencies.cmake  project_options.cmake
.github/workflows/: ci.yml
cmake/: warnings.cmake
examples/: CMakeLists.txt
examples/simple-get-request/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  crapper.cpp  curl_handle.cpp  curl_handle.hpp  delete_request.cpp  delete_request.hpp  get_request.cpp  get_request.hpp  headers.cpp  headers.hpp  libcurl.cpp  libcurl.hpp  post_request.cpp  post_request.hpp  request.cpp  request.hpp  response.hpp  types.hpp  utils.cpp  utils.hpp
src/include/crapper/: crapper.hpp  headers.hpp  method.hpp  response.hpp  status_codes.hpp
test/: CMakeLists.txt  crapper_fixture.cpp  crapper_fixture.hpp  crapper_tests.cpp  libcurl_tests.cpp
test/tools/: run_http_server.bat  run_http_server.sh  setup_venv.bat  setup_venv.sh
test/tools/http-server/: main.py  requirements.txt
